# attestation-portal

./: .gitignore  Cargo.toml  README.md  SECURITY.md
agent/: Cargo.toml
agent/src/: main.rs
docs/: future-admin-logs.md
server/: Cargo.toml
server/examples/: render_preview.rs  seed_state.rs  verify_one.rs
server/src/: lib.rs  main.rs  page.rs  verify.rs
server/templates/: app.html  base.html  index.html  no_keystore.html  not_found.html
shared/: Cargo.toml
shared/src/: lib.rs
