[workspace]
resolver = "2"
members = ["shared", "agent", "server"]
# web/askama page + dcap-qvl verification + /admin land in following phases (see server/ + SECURITY.md).

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
