[package]
name = "attestation-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
attestation-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
